--- a/src/point_cloud_processing/launch/point_cloud_settings.yaml
+++ b/src/point_cloud_processing/launch/point_cloud_settings.yaml
@@ -13,6 +13,13 @@ passThrough_Ymax:  .85
 passThrough_Zmin:  0
 passThrough_Zmax:  3
 
+alpha: 0.0
+beta: 0.0
+gamma: 0.0
+xTrans: 0.0
+yTrans: 5.0
+zTrans: 0.0
+
 statOutlier_meanK: 150
 statOutlier_stdDev: .1
 
