--- a/src/vision_cloud_fusion/CMakeLists.txt
+++ b/src/vision_cloud_fusion/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(point_cloud_processing)
+project(vision_cloud_fusion)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -12,9 +12,7 @@ find_package(catkin REQUIRED COMPONENTS
   pcl_ros
   roscpp
   sensor_msgs
- ## lidar_utility_msgs
   geometry_msgs
-
 )
 
 #test
@@ -26,7 +24,7 @@ add_definitions(${PCL_DEFINITIONS})
 catkin_package()
 
 #PCL - niko
- add_executable(${PROJECT_NAME}_node src/point_cloud_processing_node.cpp)
+ add_executable(${PROJECT_NAME}_node src/vision_cloud_fusion_node.cpp)
 # Specify libraries to link a library or executable target against
  target_link_libraries(${PROJECT_NAME}_node
    ${catkin_LIBRARIES}
