--- a/src/vision_cloud_fusion/launch/point_cloud_settings.yaml
+++ b/src/vision_cloud_fusion/launch/point_cloud_settings.yaml
@@ -20,21 +20,10 @@ xTrans: 0.0
 yTrans: 0.0
 zTrans: 0.0
 
-don_scale1: 0.05
-don_scale2: 1
-don_threshold: .9
+don_scale1: 0.15
+don_scale2: 0.22
+don_threshold: 0.15
 don_segradius: 0.1
-
-
-#don_scale1: 0.05
-#don_scale2: 0.1
-#don_threshold: 0.1
-#don_segradius: 0.1
-#Current best
-#don_scale1: 0.15
-#don_scale2: 0.22
-#don_threshold: 0.05
-#don_segradius: 0.1
 
 don_minClusterSize: 500
 don_maxClusterSize: 80000
