--- a/src/coms/CMakeLists.txt
+++ b/src/coms/CMakeLists.txt
@@ -22,6 +22,7 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
+  coms_msgs
 )
 
 ## System dependencies are found with CMake's conventions
