--- a/src/my_pkg/package.xml
+++ b/src/my_pkg/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>main</name>
+  <name>my_pkg</name>
   <version>0.0.0</version>
   <description>The main package</description>
 
