--- a/src/motion_action_server/CMakeLists.txt
+++ b/src/motion_action_server/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(abb_motion_actionserver)
+project(motion_action_server)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 add_compile_options(-std=c++11)
@@ -13,6 +13,8 @@ find_package(catkin REQUIRED COMPONENTS
   rviz_visual_tools
   moveit_visual_tools
   moveit_ros_planning_interface
+  actionlib_msgs
+  genmsg
 )
 
 ## System dependencies are found with CMake's conventions
@@ -64,6 +66,8 @@ find_package(catkin REQUIRED COMPONENTS
 
 # Generate actions in the 'action' folder
  add_action_files(
+   DIRECTORY
+   action
    FILES
    MoveRobot.action
    MoveRobotPose.action
@@ -71,10 +75,13 @@ find_package(catkin REQUIRED COMPONENTS
  )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
-# )
+ generate_messages(
+   DEPENDENCIES
+   actionlib_msgs
+   std_msgs  # Or other packages containing msgs
+   geometry_msgs
+
+ )
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -110,6 +117,8 @@ catkin_package(
 #  LIBRARIES myworkcell_core
 #  CATKIN_DEPENDS roscpp
 #  DEPENDS system_lib
+  CATKIN_DEPENDS actionlib_msgs
+
 )
 
 ###########
@@ -136,7 +145,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(${PROJECT_NAME}_node src/abb_motion_actionserver_node.cpp)
+add_executable(${PROJECT_NAME}_node src/motion_action_server_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -147,6 +156,8 @@ add_executable(${PROJECT_NAME}_node src/abb_motion_actionserver_node.cpp)
 ## Add cmake target dependencies of the executable
 ## same as for the library above
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
+
 
 ## Specify libraries to link a library or executable target against
  target_link_libraries(${PROJECT_NAME}_node
