--- a/src/avrs_main/package.xml
+++ b/src/avrs_main/package.xml
@@ -53,6 +53,14 @@
   <build_export_depend>rospy</build_export_depend>
   <exec_depend>rospy</exec_depend>
 
+  <exec_depend>actionlib</exec_depend>
+  <exec_depend>actionlib_msgs</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>roscpp</exec_depend>
+  <exec_depend>rospy</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+<exec_depend>message_generation</exec_depend>
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
