--- a/src/msgs/motion_action_server_msgs/package.xml
+++ b/src/msgs/motion_action_server_msgs/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>motion_action_server</name>
+  <name>motion_action_server_msgs</name>
   <version>0.0.0</version>
   <description>The actionlib_tutorials package</description>
 
@@ -62,11 +62,6 @@
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
-
-
-<build_export_depend>motion_action_server_msgs</build_export_depend>
-
-
   <exec_depend>actionlib</exec_depend>
   <exec_depend>actionlib_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
@@ -74,8 +69,6 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
 <exec_depend>message_generation</exec_depend>
-
-<exec_depend>motion_action_server_msgs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
