--- a/src/motion_action_server/package.xml
+++ b/src/motion_action_server/package.xml
@@ -56,6 +56,9 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
+
+  <build_depend>motion_action_server_msgs</build_depend>
+
   <build_export_depend>actionlib</build_export_depend>
   <build_export_depend>actionlib_msgs</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
