--- a/src/motion_action_server/CMakeLists.txt
+++ b/src/motion_action_server/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8.3)
 project(motion_action_server)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
- add_compile_options(-std=c++11)
+# add_compile_options(-std=c++11)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
@@ -12,14 +12,8 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
-  motion_action_server_msgs
   tf
-  rviz_visual_tools
-  moveit_visual_tools
-  moveit_ros_planning_interface
-  actionlib
-  actionlib_msgs 
-  geometry_msgs
+  motion_action_server_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -70,17 +64,17 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
-#   Action1.action
-#   Action2.action
-# )
+ #add_action_files(
+ #  FILES
+ #  MoveRobot.action
+   
+ #)
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   geometry_msgs#   std_msgs
-# )
+ #generate_messages(
+  # DEPENDENCIES
+  # geometry_msgs   std_msgs   motion_action_service_msgs
+ #)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -114,7 +108,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES template
-   CATKIN_DEPENDS geometry_msgs roscpp rospy std_msgs motion_action_server_msgs actionlib_msgs
+  CATKIN_DEPENDS geometry_msgs roscpp rospy std_msgs tf motion_action_server_msgs
 #  DEPENDS system_lib
 )
 
@@ -125,8 +119,8 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
- include  ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS}
-  ${catkin_INCLUDE_DIRS}
+# include
+  tf ${PROJECT_NAME}_msgs ${catkin_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
@@ -134,17 +128,15 @@ include_directories(
 #   src/${PROJECT_NAME}/template.cpp
 # )
 
-# Add cmake target dependencies of the library
-# as an example, code may need to be generated before libraries
-# either from message generation or dynamic reconfigure
-# add_dependencies(${PROJECT_NAME}_msgs ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+## Add cmake target dependencies of the library
+## as an example, code may need to be generated before libraries
+## either from message generation or dynamic reconfigure
+# add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 # Declare a C++ executable
 # With catkin_make all packages are built within a single CMake context
 # The recommended prefix ensures that target names across packages don't collide
- add_executable(${PROJECT_NAME}_node src/motion_action_server_node.cpp)
-
-#add_executable(motion_server src/motion_server.cpp)
+ #add_executable(${PROJECT_NAME}_node src/motion_action_server_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -152,9 +144,9 @@ include_directories(
 ## e.g. "rosrun someones_pkg node" instead of "rosrun someones_pkg someones_pkg_node"
 # set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME node PREFIX "")
 
-# Add cmake target dependencies of the executable
-# same as for the library above
- add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+## Add cmake target dependencies of the executable
+## same as for the library above
+ #add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
 # target_link_libraries(${PROJECT_NAME}_node
