--- a/src/motion_action_server/CMakeLists.txt
+++ b/src/motion_action_server/CMakeLists.txt
@@ -108,7 +108,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES template
-  CATKIN_DEPENDS geometry_msgs roscpp rospy std_msgs tf motion_action_server_msgs
+  CATKIN_DEPENDS  roscpp rospy std_msgs tf motion_action_server_msgs
 #  DEPENDS system_lib
 )
 
@@ -120,7 +120,7 @@ catkin_package(
 ## Your package locations should be listed before other locations
 include_directories(
 # include
-  tf ${PROJECT_NAME}_msgs ${catkin_INCLUDE_DIRS}
+   ${PROJECT_NAME}_msgs ${catkin_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
@@ -136,7 +136,7 @@ include_directories(
 # Declare a C++ executable
 # With catkin_make all packages are built within a single CMake context
 # The recommended prefix ensures that target names across packages don't collide
- #add_executable(${PROJECT_NAME}_node src/motion_action_server_node.cpp)
+ add_executable(${PROJECT_NAME}_node src/motion_action_server_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -146,7 +146,7 @@ include_directories(
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
- #add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+ add_dependencies(${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
 # target_link_libraries(${PROJECT_NAME}_node
