--- a/src/actionlib_tutorials_client/package.xml
+++ b/src/actionlib_tutorials_client/package.xml
@@ -73,7 +73,7 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>message_generation</exec_depend>
-
+  <exec_depend>actionlib_tutorials_msgs</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
