--- a/src/actionlib_tutorials_server/package.xml
+++ b/src/actionlib_tutorials_server/package.xml
@@ -53,7 +53,7 @@
   <build_depend>actionlib</build_depend>
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
-  <build_depend>message_generation</build_depend>
+  <!--build_depend>message_generation</build_depend-->
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
@@ -72,7 +72,8 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
-  <exec_depend>message_generation</exec_depend>
+  <exec_depend>actionlib_tutorials_msgs</exec_depend>
+  <!--exec_depend>message_generation</exec_depend-->
 
 
   <!-- The export tag contains other, unspecified, tags -->
