--- a/src/computer_vision/package.xml
+++ b/src/computer_vision/package.xml
@@ -2,8 +2,12 @@
 <package format="2">
   <name>computer_vision</name>
   <version>0.0.0</version>
-  <description>merge point cloud and vision</description>
-  <maintainer email="nxgamarra@gmail.com">Nikolas Gamarra</maintainer>
+  <description>The template package</description>
+
+  <!-- One maintainer tag required, multiple allowed, one person per tag -->
+  <!-- Example:  -->
+  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
+  <maintainer email="avrs@todo.todo">avrs</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -12,15 +16,10 @@
   <license>TODO</license>
 
 
-  <!-- PCL -->
-<build_depend>libpcl-all-dev</build_depend>
-  <exec_depend>libpcl-all</exec_depend>
-
-
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/my_pcl_tutorial</url> -->
+  <!-- <url type="website">http://wiki.ros.org/template</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -50,18 +49,18 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>pcl_conversions</build_depend>
-  <build_depend>pcl_ros</build_depend>
+  <build_depend>geometry_msgs</build_depend>
   <build_depend>roscpp</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_export_depend>pcl_conversions</build_export_depend>
-  <build_export_depend>pcl_ros</build_export_depend>
+  <build_depend>rospy</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
-  <build_export_depend>sensor_msgs</build_export_depend>
-  <exec_depend>pcl_conversions</exec_depend>
-  <exec_depend>pcl_ros</exec_depend>
+  <build_export_depend>rospy</build_export_depend>
+  <build_export_depend>std_msgs</build_export_depend>
+  <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>roscpp</exec_depend>
-  <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>rospy</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
