--- a/src/smach_machine/package.xml
+++ b/src/smach_machine/package.xml
@@ -12,12 +12,19 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>mode_msgs</build_depend>
+  <build_depend>motion_msgs</build_depend>
+
   <run_depend>rospy</run_depend>
   <run_depend>smach</run_depend>
   <run_depend>smach_ros</run_depend>
 
   <run_depend>actionlib</run_depend>
   <run_depend>actionlib_msgs</run_depend>
+
+  <run_depend>mode_msgs</run_depend>
+  <run_depend>motion_msgs</run_depend>
+  <run_depend>message_runtime</run_depend>
 
   <export>
   </export>
