--- a/src/vision_cloud_fusion/package.xml
+++ b/src/vision_cloud_fusion/package.xml
@@ -54,6 +54,7 @@
   <build_depend>pcl_ros</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>mode_msgs</build_depend>
   <build_export_depend>pcl_conversions</build_export_depend>
   <build_export_depend>pcl_ros</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
@@ -62,6 +63,7 @@
   <exec_depend>pcl_ros</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>mode_msgs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
